--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
     <header class="text-center mb-7.5 md:mb-12.5">
-        <a class="inline-block hover:opacity-80 transition-all" href="/">
+        <a class="inline-block hover:opacity-80 transition-all" href="">
             <img class="max-w-logo" src="public/img/logo.svg" alt="logo">
         </a>
     </header>
