--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="max-w-form mx-auto">
                 <a href="" class="btn border-blue__main-0 mb-4 md:mb-5">
                     <span class="btn__inner flex justify-center items-center gap-1">
-                        <img class="w-6 h-6" src="public/img/google-icon.svg" alt="star">
+                        <img class="w-6 h-6" src="public/img/google-icon.svg" alt="google icon">
                         <b>Google</b>
                     </span>
                 </a>
